--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,15 +1,10 @@
 pipeline {
-  agent any
-  stages {
-    stage("foo") {
-        steps {
-            script {
-                env.RELEASE_SCOPE = input message: 'User input required', ok: 'Release!',
-                    parameters: [choice(name: 'RELEASE_SCOPE', choices: 'patch\nminor\nmajor', 
-                                     description: 'What is the release scope?')]
+    agent any
+    stages {
+        stage('Example') {
+            steps {
+                echo "Running ${env.BUILD_ID} on ${env.JENKINS_URL}"
             }
-            echo "${env.RELEASE_SCOPE}"
         }
     }
-  }
 }
