--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -19,6 +19,11 @@ pipeline {
             }
             steps {
                 sh 'printenv'
+
+                withCredentials([sshUserPrivateKey(credentialsId: '53f245a5-f460-46f4-b3f2-1fdd107df4fc', keyFileVariable: 'key_file', passphraseVariable: 'pass', usernameVariable: 'user')]) {
+                    // some block
+                    println "$key_file"
+                }
             }
         }
     }
