--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -24,6 +24,10 @@ pipeline {
                     // some block
                     println "$key_file"
                     println "$user"
+
+                    git branch: 'master',
+                           credentialsId: '53f245a5-f460-46f4-b3f2-1fdd107df4fc',
+                           url: 'git@github.com:rihou/jenkins-test.git'
                 }
             }
         }
