--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -32,7 +32,7 @@ pipeline {
 
                     sshagent ( ['53f245a5-f460-46f4-b3f2-1fdd107df4fc']) {
                         sh '''
-                            ssh -vv myuser@github.com echo testing connection || true
+                            ssh -vv rihou@github.com echo testing connection || true
                             ssh-add -L
                             echo done running remote windows test
                             git status
